SFUSA/force-app/main/default/objects/Allocation_Report__c/fields/Barrels_Used__c.field-meta.xml
<CustomField>
        <fullName>Barrels_Used__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Barrels Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>