SFUSA/force-app/main/default/objects/Allocation_Report__c/fields/Distributor_Allocation__c.field-meta.xml
<CustomField>
        <fullName>Distributor_Allocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distributor Allocation</label>
        <referenceTo>Brand_Country_Region_State_Dist_Alloc__c</referenceTo>
        <relationshipLabel>Allocations Report</relationshipLabel>
        <relationshipName>Allocations_Report</relationshipName>
        <type>Lookup</type>
    </CustomField>