SFUSA/force-app/main/default/objects/Allocation_Report__c/fields/Leaf_Node_Status__c.field-meta.xml
<CustomField>
        <fullName>Leaf_Node_Status__c</fullName>
        <description>Field to determine the leaf node is active or not.</description>
        <label>Leaf Node Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>